🐛 - huge bug squash for mobile performance issues

--- a/styles/pinning.css
+++ b/styles/pinning.css
@@ -4,6 +4,7 @@
   position: relative;
   width: 100%;
   min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
 }
 
 /* STACKS BACKGROUNDS ON TOP OF EACH OTHER */
@@ -15,10 +16,12 @@
   position: sticky;
   top: 0;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
 }
 
 .pin_block > *:nth-child(2) {
   margin-top: -100vh;
+  margin-top: calc(var(--vh, 1vh) * -100);
 }
 
 .pin_clipped .pinned_background > * {
@@ -28,22 +31,25 @@
   -webkit-transform: translateZ(0);
 }
 
-.pin_clipped .pinned_background {
+/* .pin_clipped .pinned_background {
   -webkit-clip-path: inset(-0.5px 0);
   clip-path: inset(-0.5px 0);
   position: absolute;
   height: 100%;
-}
+} */
 
 /* ----- FOR THE PINNED TEXT BOXES ----- */
 
 .pinned_foreground:nth-child(2) > :first-child:not(.first_pin) {
   margin-top: 50vh !important;
+  margin-top: calc(var(--vh, 1vh) * 50) !important;
 }
 
 .last_pin,
 .first_pin {
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -61,7 +67,11 @@
 
 .pinned_foreground_content {
   margin-top: 50vh;
+  margin-top: calc(var(--vh, 1vh) * 50);
+
   margin-bottom: 50vh;
+  margin-bottom: calc(var(--vh, 1vh) * 50);
+
   /* color: white; */
   /* background-color: rgba(0, 0, 0, 0.8); */
   padding: var(--space--smallmed);
@@ -120,16 +130,22 @@
   left: 0;
   width: 100%;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
+
   transition: opacity 0.5s ease-in-out;
 }
 
 /* .pinned_background video {
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
+
   object-fit: cover;
 } */
 
 .pinned_background picture img {
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
+
   object-fit: cover;
   position: absolute;
 }
